# gpt-analyst

./: .gitignore  LICENSE  README.md  clean_filters.py  consolidate.py  gpt-prep.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  security.yml
tests/: __init__.py  conftest.py  test_clean_filters.py
